--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "http": "0.0.1-security",
+    "https": "^1.0.0",
     "json-server": "^0.17.1"
   }
 }
